--- a/ZayShop.csproj
+++ b/ZayShop.csproj
@@ -7,6 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Utilities\File\FileService\**" />
+    <Content Remove="Utilities\File\FileService\**" />
+    <EmbeddedResource Remove="Utilities\File\FileService\**" />
+    <None Remove="Utilities\File\FileService\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.0">
